manifest/objects/rh2__PS_Filter_Audit__c.object
<CustomObject>
    <description>Tracks field history on HS Filter</description>
    <fields>
        <fullName>rh2__Created_By__c</fullName>
        <description>The user that created the filter.</description>
        <inlineHelpText>The user that created the filter.</inlineHelpText>
        <label>Filter Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Created_Date__c</fullName>
        <description>String of the date and time the filter was created.</description>
        <inlineHelpText>String of the date and time the filter was created.</inlineHelpText>
        <label>Filter Created Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter_Label__c</fullName>
        <description>The filter label (the value that is displayed to the user, as opposed to the name value which is used internally).</description>
        <inlineHelpText>The filter label (the value that is displayed to the user, as opposed to the name value which is used internally).</inlineHelpText>
        <label>Filter Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter_Object__c</fullName>
        <description>The object the filter is querying.</description>
        <inlineHelpText>The object the filter is querying.</inlineHelpText>
        <label>Filter Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Filter_Query__c</fullName>
        <description>The filter query with all sorts and conditions applied.</description>
        <inlineHelpText>The filter query with all sorts and conditions applied.</inlineHelpText>
        <label>Filter Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Filter__c</fullName>
        <description>The filter for this audit record.</description>
        <inlineHelpText>The filter for this audit record.</inlineHelpText>
        <label>Filter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Modified_By__c</fullName>
        <description>The user that last modified the filter.</description>
        <inlineHelpText>The user that last modified the filter.</inlineHelpText>
        <label>Filter Last Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Last_Modified_Date__c</fullName>
        <description>String of the date and time the filter was last modified.</description>
        <inlineHelpText>String of the date and time the filter was last modified.</inlineHelpText>
        <label>Filter Last Modified Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Filter Audit</label>
    <nameField>
        <label>Filter Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>